// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders Accepted story 1`] = `
<body>
  <div>
    <div>
      <div
        class="pf-l-split pf-m-gutter mas-c-status"
      >
        <div
          class="pf-l-split__item"
        >
          <span
            aria-valuetext="Loading..."
            class="pf-c-spinner pf-m-md"
            role="progressbar"
          >
            <span
              class="pf-c-spinner__clipper"
            />
            <span
              class="pf-c-spinner__lead-ball"
            />
            <span
              class="pf-c-spinner__tail-ball"
            />
          </span>
        </div>
        <div
          class="pf-l-split__item"
        >
          <button
            aria-disabled="false"
            class="pf-c-button pf-m-plain"
            data-ouia-component-id="OUIA-Generated-Button-plain-1"
            data-ouia-component-type="PF4/Button"
            data-ouia-safe="true"
            type="button"
          >
            Creating
          </button>
          <div
            class="pf-l-flex"
          >
            <div
              class=""
            >
              <div
                class="pf-c-helper-text"
              >
                <div
                  class="pf-c-helper-text__item pf-m-indeterminate"
                >
                  <span
                    class="pf-c-helper-text__item-text"
                  >
                    This will be ready shortly.
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Renders AllStatutesAtOnce story 1`] = `
<body>
  <div>
    <pre
      style=""
    >
      ready
    </pre>
    <div>
      <div
        class="pf-l-split pf-m-gutter mas-c-status"
      >
        <div
          class="pf-l-split__item"
        >
          <svg
            aria-hidden="true"
            class="mas-m-ready"
            fill="currentColor"
            height="1em"
            role="img"
            style="vertical-align: -0.125em;"
            viewBox="0 0 512 512"
            width="1em"
          >
            <path
              d="M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z"
            />
          </svg>
        </div>
        <div
          class="pf-l-split__item"
        >
          Ready
        </div>
      </div>
    </div>
    <br
      style=""
    />
    <pre
      style=""
    >
      accepted
    </pre>
    <div>
      <div
        class="pf-l-split pf-m-gutter mas-c-status"
      >
        <div
          class="pf-l-split__item"
        >
          <span
            aria-valuetext="Loading..."
            class="pf-c-spinner pf-m-md"
            role="progressbar"
          >
            <span
              class="pf-c-spinner__clipper"
            />
            <span
              class="pf-c-spinner__lead-ball"
            />
            <span
              class="pf-c-spinner__tail-ball"
            />
          </span>
        </div>
        <div
          class="pf-l-split__item"
        >
          <button
            aria-disabled="false"
            class="pf-c-button pf-m-plain"
            data-ouia-component-id="OUIA-Generated-Button-plain-2"
            data-ouia-component-type="PF4/Button"
            data-ouia-safe="true"
            type="button"
          >
            Creating
          </button>
          <div
            class="pf-l-flex"
          >
            <div
              class=""
            >
              <div
                class="pf-c-helper-text"
              >
                <div
                  class="pf-c-helper-text__item pf-m-indeterminate"
                >
                  <span
                    class="pf-c-helper-text__item-text"
                  >
                    This will be ready shortly.
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <br
      style=""
    />
    <pre
      style=""
    >
      provisioning
    </pre>
    <div>
      <div
        class="pf-l-split pf-m-gutter mas-c-status"
      >
        <div
          class="pf-l-split__item"
        >
          <span
            aria-valuetext="Loading..."
            class="pf-c-spinner pf-m-md"
            role="progressbar"
          >
            <span
              class="pf-c-spinner__clipper"
            />
            <span
              class="pf-c-spinner__lead-ball"
            />
            <span
              class="pf-c-spinner__tail-ball"
            />
          </span>
        </div>
        <div
          class="pf-l-split__item"
        >
          <button
            aria-disabled="false"
            class="pf-c-button pf-m-plain"
            data-ouia-component-id="OUIA-Generated-Button-plain-3"
            data-ouia-component-type="PF4/Button"
            data-ouia-safe="true"
            type="button"
          >
            Creating
          </button>
          <div
            class="pf-l-flex"
          >
            <div
              class=""
            >
              <div
                class="pf-c-helper-text"
              >
                <div
                  class="pf-c-helper-text__item pf-m-indeterminate"
                >
                  <span
                    class="pf-c-helper-text__item-text"
                  >
                    This will be ready shortly.
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <br
      style=""
    />
    <pre
      style=""
    >
      preparing
    </pre>
    <div>
      <div
        class="pf-l-split pf-m-gutter mas-c-status"
      >
        <div
          class="pf-l-split__item"
        >
          <span
            aria-valuetext="Loading..."
            class="pf-c-spinner pf-m-md"
            role="progressbar"
          >
            <span
              class="pf-c-spinner__clipper"
            />
            <span
              class="pf-c-spinner__lead-ball"
            />
            <span
              class="pf-c-spinner__tail-ball"
            />
          </span>
        </div>
        <div
          class="pf-l-split__item"
        >
          <button
            aria-disabled="false"
            class="pf-c-button pf-m-plain"
            data-ouia-component-id="OUIA-Generated-Button-plain-4"
            data-ouia-component-type="PF4/Button"
            data-ouia-safe="true"
            type="button"
          >
            Creating
          </button>
          <div
            class="pf-l-flex"
          >
            <div
              class=""
            >
              <div
                class="pf-c-helper-text"
              >
                <div
                  class="pf-c-helper-text__item pf-m-indeterminate"
                >
                  <span
                    class="pf-c-helper-text__item-text"
                  >
                    This will be ready shortly.
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <br
      style=""
    />
    <pre
      style=""
    >
      accepted
    </pre>
     over 15 minutes
    <div>
      <div
        class="pf-l-split pf-m-gutter mas-c-status"
      >
        <div
          class="pf-l-split__item"
        >
          <span
            aria-valuetext="Loading..."
            class="pf-c-spinner pf-m-md"
            role="progressbar"
          >
            <span
              class="pf-c-spinner__clipper"
            />
            <span
              class="pf-c-spinner__lead-ball"
            />
            <span
              class="pf-c-spinner__tail-ball"
            />
          </span>
        </div>
        <div
          class="pf-l-split__item"
        >
          <button
            aria-disabled="false"
            class="pf-c-button pf-m-plain"
            data-ouia-component-id="OUIA-Generated-Button-plain-5"
            data-ouia-component-type="PF4/Button"
            data-ouia-safe="true"
            type="button"
          >
            Creating
          </button>
        </div>
      </div>
      <div
        aria-label="Warning Alert"
        class="pf-c-alert pf-m-inline pf-m-plain pf-m-warning"
        data-ouia-component-id="OUIA-Generated-Alert-warning-1"
        data-ouia-component-type="PF4/Alert"
        data-ouia-safe="true"
      >
        <div
          class="pf-c-alert__icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            role="img"
            style="vertical-align: -0.125em;"
            viewBox="0 0 576 512"
            width="1em"
          >
            <path
              d="M569.517 440.013C587.975 472.007 564.806 512 527.94 512H48.054c-36.937 0-59.999-40.055-41.577-71.987L246.423 23.985c18.467-32.009 64.72-31.951 83.154 0l239.94 416.028zM288 354c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
            />
          </svg>
        </div>
        <h4
          class="pf-c-alert__title"
        >
          <span
            class="pf-u-screen-reader"
          >
            Warning alert:
          </span>
          This is taking longer than expected.
        </h4>
        
      </div>
    </div>
    <br
      style=""
    />
    <pre
      style=""
    >
      accepted
    </pre>
     over 30 minutes
    <div>
      <div
        class="pf-l-split pf-m-gutter mas-c-status"
      >
        <div
          class="pf-l-split__item"
        >
          <span
            aria-valuetext="Loading..."
            class="pf-c-spinner pf-m-md"
            role="progressbar"
          >
            <span
              class="pf-c-spinner__clipper"
            />
            <span
              class="pf-c-spinner__lead-ball"
            />
            <span
              class="pf-c-spinner__tail-ball"
            />
          </span>
        </div>
        <div
          class="pf-l-split__item"
        >
          <button
            aria-disabled="false"
            class="pf-c-button pf-m-plain"
            data-ouia-component-id="OUIA-Generated-Button-plain-6"
            data-ouia-component-type="PF4/Button"
            data-ouia-safe="true"
            type="button"
          >
            Creating
          </button>
        </div>
      </div>
      <div
        aria-label="Danger Alert"
        class="pf-c-alert pf-m-inline pf-m-plain pf-m-danger"
        data-ouia-component-id="OUIA-Generated-Alert-danger-1"
        data-ouia-component-type="PF4/Alert"
        data-ouia-safe="true"
      >
        <div
          class="pf-c-alert__icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            role="img"
            style="vertical-align: -0.125em;"
            viewBox="0 0 512 512"
            width="1em"
          >
            <path
              d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
            />
          </svg>
        </div>
        <h4
          class="pf-c-alert__title"
        >
          <span
            class="pf-u-screen-reader"
          >
            Danger alert:
          </span>
          This is taking longer than expected.
        </h4>
        
      </div>
    </div>
    <br
      style=""
    />
    <pre
      style=""
    >
      deleting
    </pre>
    <div>
      <p
        class="mas-m-deleting"
      >
         
        Deleting
      </p>
    </div>
    <br
      style=""
    />
    <pre
      style=""
    >
      deprovision
    </pre>
    <div>
      <p
        class="mas-m-deleting"
      >
         
        Deleting
      </p>
    </div>
    <br
      style=""
    />
    <pre
      style=""
    >
      degraded
    </pre>
    <div>
      <div
        class="pf-l-split pf-m-gutter mas-c-status"
      >
        <div
          class="pf-l-split__item"
        >
          <svg
            aria-hidden="true"
            class="mas-m-degraded"
            fill="currentColor"
            height="1em"
            role="img"
            style="vertical-align: -0.125em;"
            viewBox="0 0 512 512"
            width="1em"
          >
            <path
              d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
            />
          </svg>
        </div>
        <div
          class="pf-l-split__item"
        >
          Degraded
        </div>
      </div>
    </div>
    <br
      style=""
    />
  </div>
</body>
`;

exports[`Renders CreatingOver15Minutes story 1`] = `
<body>
  <div>
    <div>
      <div
        class="pf-l-split pf-m-gutter mas-c-status"
      >
        <div
          class="pf-l-split__item"
        >
          <span
            aria-valuetext="Loading..."
            class="pf-c-spinner pf-m-md"
            role="progressbar"
          >
            <span
              class="pf-c-spinner__clipper"
            />
            <span
              class="pf-c-spinner__lead-ball"
            />
            <span
              class="pf-c-spinner__tail-ball"
            />
          </span>
        </div>
        <div
          class="pf-l-split__item"
        >
          <button
            aria-disabled="false"
            class="pf-c-button pf-m-plain"
            data-ouia-component-id="OUIA-Generated-Button-plain-7"
            data-ouia-component-type="PF4/Button"
            data-ouia-safe="true"
            type="button"
          >
            Creating
          </button>
        </div>
      </div>
      <div
        aria-label="Warning Alert"
        class="pf-c-alert pf-m-inline pf-m-plain pf-m-warning"
        data-ouia-component-id="OUIA-Generated-Alert-warning-2"
        data-ouia-component-type="PF4/Alert"
        data-ouia-safe="true"
      >
        <div
          class="pf-c-alert__icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            role="img"
            style="vertical-align: -0.125em;"
            viewBox="0 0 576 512"
            width="1em"
          >
            <path
              d="M569.517 440.013C587.975 472.007 564.806 512 527.94 512H48.054c-36.937 0-59.999-40.055-41.577-71.987L246.423 23.985c18.467-32.009 64.72-31.951 83.154 0l239.94 416.028zM288 354c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
            />
          </svg>
        </div>
        <h4
          class="pf-c-alert__title"
        >
          <span
            class="pf-u-screen-reader"
          >
            Warning alert:
          </span>
          This is taking longer than expected.
        </h4>
        
      </div>
    </div>
  </div>
</body>
`;

exports[`Renders CreatingOver30Minutes story 1`] = `
<body>
  <div>
    <div>
      <div
        class="pf-l-split pf-m-gutter mas-c-status"
      >
        <div
          class="pf-l-split__item"
        >
          <span
            aria-valuetext="Loading..."
            class="pf-c-spinner pf-m-md"
            role="progressbar"
          >
            <span
              class="pf-c-spinner__clipper"
            />
            <span
              class="pf-c-spinner__lead-ball"
            />
            <span
              class="pf-c-spinner__tail-ball"
            />
          </span>
        </div>
        <div
          class="pf-l-split__item"
        >
          <button
            aria-disabled="false"
            class="pf-c-button pf-m-plain"
            data-ouia-component-id="OUIA-Generated-Button-plain-8"
            data-ouia-component-type="PF4/Button"
            data-ouia-safe="true"
            type="button"
          >
            Creating
          </button>
        </div>
      </div>
      <div
        aria-label="Danger Alert"
        class="pf-c-alert pf-m-inline pf-m-plain pf-m-danger"
        data-ouia-component-id="OUIA-Generated-Alert-danger-2"
        data-ouia-component-type="PF4/Alert"
        data-ouia-safe="true"
      >
        <div
          class="pf-c-alert__icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            role="img"
            style="vertical-align: -0.125em;"
            viewBox="0 0 512 512"
            width="1em"
          >
            <path
              d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
            />
          </svg>
        </div>
        <h4
          class="pf-c-alert__title"
        >
          <span
            class="pf-u-screen-reader"
          >
            Danger alert:
          </span>
          This is taking longer than expected.
        </h4>
        
      </div>
    </div>
  </div>
</body>
`;

exports[`Renders Deleting story 1`] = `
<body>
  <div>
    <div>
      <p
        class="mas-m-deleting"
      >
         
        Deleting
      </p>
    </div>
  </div>
</body>
`;

exports[`Renders Deprovision story 1`] = `
<body>
  <div>
    <div>
      <p
        class="mas-m-deleting"
      >
         
        Deleting
      </p>
    </div>
  </div>
</body>
`;

exports[`Renders Degraded story 1`] = `
<body>
  <div>
    <div>
      <div
        class="pf-l-split pf-m-gutter mas-c-status"
      >
        <div
          class="pf-l-split__item"
        >
          <svg
            aria-hidden="true"
            class="mas-m-degraded"
            fill="currentColor"
            height="1em"
            role="img"
            style="vertical-align: -0.125em;"
            viewBox="0 0 512 512"
            width="1em"
          >
            <path
              d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
            />
          </svg>
        </div>
        <div
          class="pf-l-split__item"
        >
          Degraded
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Renders Preparing story 1`] = `
<body>
  <div>
    <div>
      <div
        class="pf-l-split pf-m-gutter mas-c-status"
      >
        <div
          class="pf-l-split__item"
        >
          <span
            aria-valuetext="Loading..."
            class="pf-c-spinner pf-m-md"
            role="progressbar"
          >
            <span
              class="pf-c-spinner__clipper"
            />
            <span
              class="pf-c-spinner__lead-ball"
            />
            <span
              class="pf-c-spinner__tail-ball"
            />
          </span>
        </div>
        <div
          class="pf-l-split__item"
        >
          <button
            aria-disabled="false"
            class="pf-c-button pf-m-plain"
            data-ouia-component-id="OUIA-Generated-Button-plain-9"
            data-ouia-component-type="PF4/Button"
            data-ouia-safe="true"
            type="button"
          >
            Creating
          </button>
          <div
            class="pf-l-flex"
          >
            <div
              class=""
            >
              <div
                class="pf-c-helper-text"
              >
                <div
                  class="pf-c-helper-text__item pf-m-indeterminate"
                >
                  <span
                    class="pf-c-helper-text__item-text"
                  >
                    This will be ready shortly.
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Renders Provisioning story 1`] = `
<body>
  <div>
    <div>
      <div
        class="pf-l-split pf-m-gutter mas-c-status"
      >
        <div
          class="pf-l-split__item"
        >
          <span
            aria-valuetext="Loading..."
            class="pf-c-spinner pf-m-md"
            role="progressbar"
          >
            <span
              class="pf-c-spinner__clipper"
            />
            <span
              class="pf-c-spinner__lead-ball"
            />
            <span
              class="pf-c-spinner__tail-ball"
            />
          </span>
        </div>
        <div
          class="pf-l-split__item"
        >
          <button
            aria-disabled="false"
            class="pf-c-button pf-m-plain"
            data-ouia-component-id="OUIA-Generated-Button-plain-10"
            data-ouia-component-type="PF4/Button"
            data-ouia-safe="true"
            type="button"
          >
            Creating
          </button>
          <div
            class="pf-l-flex"
          >
            <div
              class=""
            >
              <div
                class="pf-c-helper-text"
              >
                <div
                  class="pf-c-helper-text__item pf-m-indeterminate"
                >
                  <span
                    class="pf-c-helper-text__item-text"
                  >
                    This will be ready shortly.
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Renders Ready story 1`] = `
<body>
  <div>
    <div>
      <div
        class="pf-l-split pf-m-gutter mas-c-status"
      >
        <div
          class="pf-l-split__item"
        >
          <svg
            aria-hidden="true"
            class="mas-m-ready"
            fill="currentColor"
            height="1em"
            role="img"
            style="vertical-align: -0.125em;"
            viewBox="0 0 512 512"
            width="1em"
          >
            <path
              d="M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z"
            />
          </svg>
        </div>
        <div
          class="pf-l-split__item"
        >
          Ready
        </div>
      </div>
    </div>
  </div>
</body>
`;
